@@ -1,3 +1,14 @@
+2008-04-21  Andre Poenitz  <andre.poenitz@trolltech.com>
+
+        Reviewed by Simon Hausmann <hausmann@webkit.org>.
+
+        Fixe compilation with Qt namespaces
+        
+
+        * Api/qwebframe.cpp:
+        (QWebFrame::print):
+        * Api/qwebview.h:
+
 2008-04-21  Simon Hausmann  <hausmann@webkit.org>
 
         Reviewed by Holger.
